# google-analytics-mcp

./: .gitignore  .mcpregistry_registry_token  CHANGELOG.md  LICENSE  README.md  RELEASING.md  TELEMETRY.md  claude-config-template.json  ga4_mcp_server.py  pyproject.toml  requirements.txt  server.json  smithery.yaml  sourcey.config.ts  test_cases.md  vercel.json
.github/workflows/: package-checks.yml  release.yml
Formula/: google-analytics-mcp.rb
docs/: iam.md  openapi_spec.yaml  schema.md  setup.md
docs/pages/: __main__.md  coordinator.md  server.md  tools_metadata.md  tools_reporting.md
ga4_mcp/: coordinator.py  resources.py  server.py  setup_flow.py  telemetry.py
ga4_mcp/tools/: metadata.py  reporting.py  skills.py  troubleshooting.py
gemini-extension/: SKILL.md  gemini-extension.json  tools.yaml
npm/: package.json
plugins/openclaw/: plugin.json
scripts/: check_package_consistency.py  weekly_dashboard.html
skills/: ai-referral-analysis.md  attribution-scope.md  bot-traffic-detection.md  channel-acquisition.md  common-metric-names.md  compatible-combinations.md  content-performance.md  custom-dimensions.md  date-ranges.md  ecommerce-analysis.md  filter-structures.md  ga4-limitations.md  geo-device-segmentation.md  index.md  traffic-diagnosis.md  ua-to-ga4.md
workers/install-telemetry/: wrangler.toml
workers/install-telemetry/.wrangler/cache/: cf.json  wrangler-account.json
workers/install-telemetry/src/: index.js
